2014-07-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: ([-runMode:beforeDate:]) check performers as
	well as notifications etc ... should fix bug #39107

2014-02-17  Larry Campbell <lcampbel@akamai.com>

	* Source/NSJSONSerialization.m:
	* Tests/base/NSJSONSerialization/tests00.m:
	Fixes for bug #41628

2014-07-12 Yavor Doganov  <yavor@gnu.org>

	* Tests/GNUmakefile:
	* Tests/base/Functions/NSGeometry1.m:
	* Tests/base/NSRunLoop/performers.m:
	Tweaks for running in sandbox (bug #42740)

2014-07-07  Yunqiang Su  <wzssyqa@gmail.com>  (tiny change)

	* config/config.trampoline.c:
	* Source/NSObject.m (GSAtomicIncrement, GSAtomicDecrement):
	Use __mips64 to distinguish MIPS64.

2014-06-30  Yavor Doganov  <yavor@gnu.org>

	* Tools/GNUmakefile (CONFIG_SYSTEM_LIBS):
	* Tools/make_strings/GNUmakefile (CONFIG_SYSTEM_LIBS): Define
	to the empty string to avoid linking the tools against
	external libraries.
	
2014-06-30 Yavor Doganov  <yavor@gnu.org>

	* base.make.in: make base dependencies explicit only when statically
	linnking (bug #42423)

2014-06-30 Yavor Doganov  <yavor@gnu.org>

	* GNUmakefile: Use -include for deb.make (for backward compatibility
	with old versions of gnustep-make).
	* Documentation/GNUmakefile:
	* Documentation/General/GNUmakefile:
	* Source/DocMakefile:
	* Tools/DocMakefile:
	Flags alterations to build documentation before base/autogsdoc is
	installed.
        * configure.ac: Test whether gnutls needs libgcrypt
        * Source/GSTLS.h: Use test
        * Source/GSTLS.m: Use test
        * configure: regenerate

2014-06-26 Riccardo Mottola <rm@gnu.org>

	* Headers/GNUstepBase/GSTypeEncoding.h
	* Headers/GNUstepBase/GSVersionMacros.h
	Substitute #import with #include so that the header can be used in
	a pure C file without gcc warnings.

2014-06-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSocketPortNameServer.m:
	* Source/NSMessagePortNameServer.m:
	Maps of ports to names modified to treat the ports as non owned