@@ -22,8 +22,6 @@
    Boston, MA 02111 USA.
    */
 
-#define	_FILE_OFFSET_BITS 64
-
 #import "common.h"
 #define	EXPOSE_NSFileHandle_IVARS	1
 #define	EXPOSE_GSFileHandle_IVARS	1
