@@ -37,7 +37,6 @@
    $Date$ $Revision$
 */
 
-#define _FILE_OFFSET_BITS 64
 /* The following define is needed for Solaris get(pw/gr)(nam/uid)_r declartions
    which default to pre POSIX declaration.  */
 #define _POSIX_PTHREAD_SEMANTICS
